Regression: Clone Tool in Image Editor not showing the Clone Source Overlay #105711

Closed
opened 2023-03-13 11:47:12 +01:00 by xavier.pothron · 3 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Broken between caf6225a3d and 3a7dc572dc

Short description of error

The Clone Tool in the Image Editor is not showing the Clone Source overlay anymore (it's working on 3.3 but not on 3.4, 3.4.1 and the 3.5 beta). The Clone Tool is actually working it's just the transparent overlay of the source that is not showing anymore.

Exact steps for others to reproduce the error

Load two images in the image editor, select the Clone Tool, in advanced put the other image as the source.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Broken between caf6225a3d01 and 3a7dc572dc9b **Short description of error** The Clone Tool in the Image Editor is not showing the Clone Source overlay anymore (it's working on 3.3 but not on 3.4, 3.4.1 and the 3.5 beta). The Clone Tool is actually working it's just the transparent overlay of the source that is not showing anymore. **Exact steps for others to reproduce the error** Load two images in the image editor, select the Clone Tool, in advanced put the other image as the source.
xavier.pothron added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-13 11:47:13 +01:00

Can confirm

Can confirm
Richard Antalik added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-14 05:35:32 +01:00
Richard Antalik changed title from Clone Tool in Image Editor not showing the Clone Source Overlay to Regression: Clone Tool in Image Editor not showing the Clone Source Overlay 2023-03-15 02:57:40 +01:00
Richard Antalik added
Priority
High
and removed
Priority
Normal
labels 2023-03-15 02:58:41 +01:00

I am not able to bisect this - no set of libraries is working for me.

I am not able to bisect this - no set of libraries is working for me.
Clément Foucault self-assigned this 2023-03-15 17:05:46 +01:00

Fixed by 1b34c466bc

Fixed by 1b34c466bc3d8dff972ad0cd55ecb329f3554795
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-15 17:37:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105711
No description provided.