Fix #105711: Regression: Clone Tool in Image Editor not showing Stencil

This was likely caused by a bad merge when doing the uniform name
patching for Metal.
This also fix the same issue for active UDIM tile overlay which wasn't
reported.